--- a/BootstrapSite4/Views/Shared/_Layout.cshtml
+++ b/BootstrapSite4/Views/Shared/_Layout.cshtml
@@ -10,18 +10,18 @@
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/helper.css" />
     <!-- /#wrapper -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/lobibox.min.css" />
-    <script type="text/javascript" src="/js/lobibox.min.js"></script>
 </head>
 <body>
     <div id="wrapper">
         @RenderBody()
     </div>
     <!-- Menu Toggle Script -->
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="/vendor/jquery/jquery.scrollstop.min.js"></script>
+    <script type="text/javascript" src="/js/helper.js"></script>
     <script>
         $("#menu-toggle").click(function (e) {
             e.preventDefault();
