--- a/BootstrapSite4/Views/Home/Partials/MenuPartial.cshtml
+++ b/BootstrapSite4/Views/Home/Partials/MenuPartial.cshtml
@@ -3,7 +3,7 @@
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
             <a href="#">
-                Start Bootstrap
+                Проекты
             </a>
         </li>
         @foreach (var t in Model)
