--- a/BootstrapSite4/Views/Home/Partials/MenuPartial.cshtml
+++ b/BootstrapSite4/Views/Home/Partials/MenuPartial.cshtml
@@ -1,10 +1,9 @@
-﻿@model List<ProjectModel>
+﻿@using BootstrapSite4.Model
+@model List<ProjectModel>
 <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a href="#">
-                Проекты
-            </a>
+        <li class="sidebar-brand">            
+                Проекты           
         </li>
         @foreach (var t in Model)
         {
